<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:background="@color/colorWhite"
    tools:context=".ui.main.WeatherFragment">

    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_initial_location"
        android:textColor="@color/colorGray"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textAlignment="center"
        android:textSize="@dimen/text_view_text_size"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:id="@+id/weatherIconContainer"
        android:layout_below="@+id/txtLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/txtWeatherDescription"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_weather_description"
            android:textColor="@color/colorGray"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/text_view_text_size"/>


        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_below="@id/txtWeatherDescription"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/weather_description"
            android:src="@drawable/unknown" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/temperatureContainer"
        android:layout_below="@id/weatherIconContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_weather_data"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/colorGray"
            android:maxLines="1"
            android:layout_centerInParent="true"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_vertical_margin" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/txtTemperature"
            android:layout_toEndOf="@id/txtTemperature">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/maxTempIcon"
                    android:layout_width="@dimen/arrow_width"
                    android:layout_height="@dimen/arrow_height"
                    android:contentDescription="@string/weather_description"
                    android:src="@drawable/max_temp_icon" />

                <TextView
                    android:id="@+id/txtMaxTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/arrow_height"
                    android:text="@string/initial_weather_data"
                    android:textSize="@dimen/text_view_text_size"
                    android:textColor="@color/colorGray"
                    android:maxLines="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/minTempIcon"
                    android:layout_width="@dimen/arrow_width"
                    android:layout_height="@dimen/arrow_height"
                    android:contentDescription="@string/weather_description"
                    android:src="@drawable/min_temp_icon" />

                <TextView
                    android:id="@+id/txtMinTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/arrow_height"
                    android:text="@string/initial_weather_data"
                    android:textSize="@dimen/text_view_text_size"
                    android:textColor="@color/colorGray"
                    android:maxLines="1" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperatureContainer"
        android:id="@+id/humidityPressureContainer"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:id="@+id/humidityContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/humidityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/humidity"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/label_text_size" />

            <TextView
                android:id="@+id/txtHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_weather_data"
                android:textSize="@dimen/text_view_text_size"
                android:textColor="@color/colorGray"
                android:maxLines="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/pressureContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/pressureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@string/pressure"
                android:textSize="@dimen/label_text_size"
                android:maxLines="1"
                android:textColor="@color/colorGray"/>

            <TextView
                android:id="@+id/txtPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_weather_data"
                android:textSize="@dimen/text_view_text_size"
                android:textColor="@color/colorGray"
                android:maxLines="1"/>

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/windContainer"
        android:layout_below="@+id/humidityPressureContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/windLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/wind"
            android:textSize="@dimen/label_text_size"
            android:maxLines="1"
            android:textColor="@color/colorGray"/>

        <TextView
            android:id="@+id/txtWindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_weather_data"
            android:textSize="@dimen/text_view_text_size"
            android:textColor="@color/colorGray"
            android:maxLines="1"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" />

    </LinearLayout>

</RelativeLayout>